# OOP_Labs

1'st lab_Rakhimov_/: .gitignore  CMakeLists.txt  README.md  main.cpp
1'st lab_Rakhimov_/include/: divisible.h
1'st lab_Rakhimov_/src/: divisible.cpp
1'st lab_Rakhimov_/tests/: tests01.cpp
2'nd_lab_Rakhimov/: .gitignore  CMakeLists.txt  README.md  main.cpp  plan.md
2'nd_lab_Rakhimov/examples/: main.cpp
2'nd_lab_Rakhimov/include/: Eleven.hpp
2'nd_lab_Rakhimov/src/: Eleven.cpp  ElevenConversation.cpp  ElevenOperations.cpp
lab6/: CMakeLists.txt  README.md
lab6/include/: BattleVisitor.hpp  ConsoleLogger.hpp  Dragon.hpp  FileLogger.hpp  Knight.hpp  NPC.hpp  NpcFactory.hpp  NpcVisitor.hpp  Observer.hpp  Pegasus.hpp  Point.hpp  World.hpp
lab6/src/: BattleVisitor.cpp  FileLogger.cpp  World.cpp  main.cpp
lab6/tests/: npc_test.cpp
